--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "e208d5e2-1b78-4184-8edf-213f029ab65f",
    "metadata": {},
    "outputs": [],
@@ -351,6 +351,16 @@
     "            newlist.append(r)\n",
     "\n",
     "pd.DataFrame(np.array(newlist)).to_csv(\"almosthere.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d539d180-cacc-40df-9bc6-f517722f44d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_latest1 = pd.read_csv(\"almosthere.csv\")\n"
    ]
   }
  ],
